Freedom Sanbox Ant Deploy/src/objects/Email_Detail__c.object
<CustomObject>
    <fields>
        <fullName>BccAddresses__c</fullName>
        <label>BccAddresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CcAddresses__c</fullName>
        <label>CcAddresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentAttachments__c</fullName>
        <label>DocumentAttachments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HtmlBody__c</fullName>
        <label>HtmlBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReplyTo__c</fullName>
        <label>ReplyTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <label>ToAddresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMAIL-{00000}</displayFormat>
        <label>Email Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>